--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "postgres",
-    "password": "postgres",
+    "password": "2405tako",
     "database": "8Bak",
     "host": "localhost",
     "dialect": "postgres"
